优化category导入导出